--- a/kontak.html
+++ b/kontak.html
@@ -68,8 +68,8 @@
           </div>
           <div class="mt-8">
             <h4 class="font-semibold mb-2">Lokasi Kami</h4>
-            <div class="w-full h-48 bg-gray-200 rounded-lg flex items-center justify-center text-gray-500">
-              <i class="fas fa-map-marked-alt text-3xl mr-2"></i> [Peta Lokasi Placeholder]
+            <div class="w-full h-64 rounded-lg overflow-hidden">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.908493399999!2d111.1256228!3d-7.6280779!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e798b74e967fcc7%3A0xfd95abd1ddf99dbc!2sSMP%20%26%20SMK%20IDN%20Boarding%20School%20Solo!5e0!3m2!1sen!2sid!4v1723381506000!5m2!1sen!2sid" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
