--- a/forum-pengajuan.html
+++ b/forum-pengajuan.html
@@ -143,13 +143,13 @@
 
         <!-- Application Form Section -->
         <div id="applicationFormSection" class="mt-16">
-          <div class="bg-white rounded-xl shadow-lg p-6 md:p-8">
+          <div class="w-full">
             <div class="text-center mb-8">
               <h2 class="text-2xl font-bold text-gray-800 mb-2">Formulir Pengajuan Izin Usaha</h2>
               <p class="text-gray-600">Silakan isi formulir di bawah ini untuk mengajukan izin usaha Anda</p>
             </div>
             
-            <div id="selectedServiceInfo" class="mb-6 p-4 bg-blue-50 rounded-lg border border-blue-100">
+            <div id="selectedServiceInfo" class="mb-6 p-4">
               <h3 class="font-semibold text-gray-800 mb-2">Layanan yang Dipilih:</h3>
               <p id="selectedServiceName" class="text-primary font-medium"></p>
               
@@ -253,7 +253,6 @@
 
     <!-- Scripts -->
     <script src="js/navbar.js"></script>
-    <script src="js/footer.js"></script>
     <script src="js/forum-pengajuan.js"></script>
   </body>
 </html>
