--- a/berita-detail.html
+++ b/berita-detail.html
@@ -49,6 +49,30 @@
         margin-left: 1.5rem;
         margin-bottom: 1rem;
       }
+      .image-loading {
+        position: relative;
+        min-height: 200px;
+        background: #f5f5f5;
+        border-radius: 8px;
+        overflow: hidden;
+      }
+      .image-loading::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 40px;
+        height: 40px;
+        margin: -20px 0 0 -20px;
+        border: 3px solid rgba(0, 0, 0, 0.1);
+        border-top: 3px solid #3498db;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
     </style>
 </head>
 <body class="bg-gray-100 font-sans">
@@ -155,30 +179,4 @@
     <script src="js/navbar.js"></script>
     <script src="js/news-detail.js"></script>
 </body>
-</html>
-<html lang="en" class="scroll-smooth">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Detail Berita - Izin.In</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              poppins: ["Poppins", "sans-serif"],
-            },
-            colors: {
-              primary: "#2563eb",
-              secondary: "#1e293b",
-              accent: "#f59e0b",
-            },
-          },
-        },
-      };
-    </script>
-  </head>
 </html>
